# ToyC

./: .gitignore  ASSIGNMENT.md  CMakeLists.txt  CONTEXT.md  README.md  lexer.yy.h
docs/: design.md  development-log.md  perf.md  practice-report.md  roadmap.md  test-plan.md
docs/adr/: 0001-use-simple-three-address-ir.md  0002-use-stack-slots-for-correct-backend.md  0003-follow-basic-riscv-calling-convention.md  0004-tokenize-only-nonnegative-numbers.md
src/: main.cpp
src/backend/: riscv.cpp
src/frontend/: lexer.l  parser.y  parser_driver.cpp
src/ir/: ir.hpp  ir_builder.cpp  optim.cpp  optim.hpp
tests/perf/: README.md  c01_zero_trip.tc  c02_subtract.tc  c03_step2.tc  c04_le_bound.tc  c05_countdown.tc  c06_mul_coef.tc  c07_i_live_after.tc  c08_break_inside.tc  c09_nested_carry.tc  c10_seq_loops.tc  c11_neq_loop.tc  c12_step3_lt.tc  c13_step2_le.tc  c14_countdown_step2.tc  c15_neq_step3.tc  c17_sub_in_chain.tc  c18_neg_coef.tc  p01_const.tc  p02_dead_code.tc  p03_copy.tc  p04_common_subexpr.tc  p05_algebra.tc  p06_tail_recursion.tc  p07_loop.tc  p08_basic_combined.tc  p09_advanced_graph.tc  p10_advanced_matrix.tc  p11_global_const_prop.tc  p12_const_expr_chain.tc  p13_fib_recursive.tc  p14_modpow.tc  p15_ackermann.tc  p16_collatz.tc  p17_loop_pow.tc  p18_nested_loop.tc  p19_gcd_pairs.tc  p20_newton_sqrt.tc  p21_tribonacci.tc  p22_branch_storm.tc  (+26 more)
tools/: run_functional.py  run_perf.py  rv32im_sim.py
tools/baseline/: after_coalesce.txt  after_label_opt.txt  cache_pass.txt
tools/perf_history/: 00_baseline_20260625_233203.txt  01_phase1_2_2339.txt  02_phase3_2344.txt  03_phase4_2349.txt  04_phase4c_2352.txt  05_phase4d_2354.txt  06_phase5_0000.txt  (+2 more)
